responsive: fixes centered grid on safari for small screens

--- a/components/block_collection/stylesheets/block_collection.styl
+++ b/components/block_collection/stylesheets/block_collection.styl
@@ -209,6 +209,7 @@ privacy-color-hover('.grid__block--channel .grid__block__inner--privacy-', color
 
 @media (max-width:(block_width_mar * 3) + 30)
   .grid
+    -webkit-justify-content center
     justify-content center
 
   .grid__block
